# visual-encoders

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
data/results/embeddings_topology_experiment/: _logs.json  _settings.json  alexnet_embeddings_topology.json  facebook-convnext-base-224_embeddings_topology.json  facebook-convnext-tiny-224_embeddings_topology.json  microsoft-beit-base-patch16-224-pt22k-ft22k_embeddings_topology.json  microsoft-beit-base-patch16-224_embeddings_topology.json  openai-clip-vit-base-patch16_embeddings_topology.json  resnet50_embeddings_topology.json
data/results/probing_experiment/: probing_logs.json  probing_scores.json
reports/: refs.bib  report.tex
src/: config.py
src/probing/: probing.py
src/topology/: layers_extractor.py  main.py  plot.py  setup.py  topology.py  topology_plot.ipynb
